# refos

./: CMakeLists.txt
apps/console_server/: CMakeLists.txt
apps/console_server/src/: console_server.c  device_input.c  device_screen.c  ega_vterm.c  state.c  state.h
apps/console_server/src/dispatchers/: serv_dispatch.c
apps/console_server/src/dispatchers/dspace/: screen_dspace.c
apps/file_server/: CMakeLists.txt
apps/file_server/src/: file_server.c  pager.c
apps/nethack/: CMakeLists.txt
apps/process_server/: CMakeLists.txt
apps/process_server/src/: state.c
apps/process_server/src/dispatchers/: mem_syscall.c
apps/process_server/src/system/addrspace/: vspace.c
apps/process_server/src/system/memserv/: dataspace.c  window.c
apps/process_server/src/system/process/: proc_client_watch.c  process.c  process.h  thread.c
apps/process_server/src/test/: test_memserv.c
apps/selfloader/: CMakeLists.txt
apps/selfloader/src/: selfloader.c  selfloader.h
apps/snake/: CMakeLists.txt
apps/terminal/: CMakeLists.txt
apps/test_os/: CMakeLists.txt
apps/test_os/src/: test_fileserv.c  test_os.c
apps/test_user/: CMakeLists.txt
apps/test_user/src/: test_user.c
apps/tetris/: CMakeLists.txt
apps/timer_server/: CMakeLists.txt
apps/timer_server/src/: device_timer.c  timer_server.c
apps/timer_server/src/dispatchers/dspace/: dspace.c  timer_dspace.c
impl/: Makefile
impl/apps/console_server/src/: device_input.c  device_input.h  ega_vterm.h
impl/apps/console_server/src/dispatchers/dspace/: dspace.c  stdio_dspace.c
impl/apps/file_server/src/: dataspace.c  dataspace.h
impl/apps/file_server/src/dispatchers/: cpio_dspace.c  fault_notify.c  serv_dispatch.c
impl/apps/process_server/src/: state.c  state.h
impl/apps/process_server/src/dispatchers/: data_syscall.c  dispatcher.c  fault_handler.c  name_syscall.c  proc_syscall.c
impl/apps/process_server/src/system/addrspace/: vspace.c  vspace.h
impl/apps/process_server/src/system/memserv/: dataspace.h  ringbuffer.c  ringbuffer.h  window.h
impl/apps/process_server/src/system/process/: proc_client_watch.h  process.c  thread.c  thread.h
impl/apps/process_server/src/test/: test.c  test_addrspace.c  test_process.c
impl/apps/selfloader/src/: selfloader.c
impl/apps/terminal/src/: terminal.c
impl/apps/test_os/src/: test_anon_ram.c
impl/apps/timer_server/src/: device_timer.c  device_timer.h
impl/apps/timer_server/src/dispatchers/: serv_dispatch.c
impl/libs/librefos/include/refos/: error.h
impl/libs/librefos/include/refos-rpc/: proc_client_helper.h
impl/libs/librefos/include/refos-util/: serv_common.h
impl/libs/librefos/interface/: data_interface.xml  name_interface.xml  proc_interface.xml  serv_interface.xml
impl/libs/librefos/src/refos-rpc/: name_client_helper.c
impl/libs/librefos/src/refos-util/: device_irq.c  nameserv.c  serv_common.c  serv_connect.c  walloc.c
impl/libs/librefossys/src/: sys_io.c  sys_morecore.c
impl/libs/librefossys/src/refos-io/: filetable.c  mmap_segment.c  morecore.c
libs/libdatastruct/: CMakeLists.txt
libs/libdatastruct/include/data_struct/: cpool.h
libs/libdatastruct/src/: cpool.c
libs/librefos/: CMakeLists.txt
libs/librefos/include/refos-rpc/: data_client.h  data_client_helper.h  data_server.h  name_client.h  name_client_helper.h  name_server.h  proc_client.h  proc_server.h  serv_client.h  serv_server.h
libs/librefos/include/refos-util/: device_irq.h  nameserv.h
libs/librefos/interface/: data_interface.xml
libs/librefos/src/: error.c  sync.c
libs/librefos/src/refos-rpc/: data_client.c  data_dispatcher.c  data_server.c  name_client.c  name_client_helper.c  name_dispatcher.c  name_server.c  proc_client.c  proc_dispatcher.c  proc_server.c  rpc.c  rpc_refos.c  serv_client.c  serv_client_helper.c  serv_dispatcher.c  serv_server.c
libs/librefos/src/refos-util/: device_io.c
libs/librefossys/: CMakeLists.txt
libs/librefossys/include/refos-io/: ipc_state.h
libs/librefossys/src/: sys_stubs.c
libs/librefossys/src/refos-io/: stdio.c
libs/libvterm/: CMakeLists.txt
